# avoid_the_squares

./: CMakeLists.txt  Enemies.cpp  Enemies.h  Player.cpp  Player.h  globals.h  main.cpp  tasks.todo
lib/: libsfml-graphics.so.3.0  libsfml-network.so.3.0  libsfml-window.so.3.0
